[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ipmi-temperature-control"
version = "0.0.1"
dependencies = [
    "annotated-types==0.7.0",
    "logger==1.4",
    "pydantic==2.10.6",
    "pydantic-settings==2.7.1",
    "pydantic_core==2.27.2",
    "python-dotenv==1.0.1",
    "PyYAML==6.0.2",
    "ruamel.yaml==0.18.10",
    "ruamel.yaml.clib==0.2.12",
    "typing_extensions==4.12.2",
    "python-daemon==3.1.2"
]

[project.scripts]
ipmi-temperature-control = "ipmi_temperature_control.entrypoint:main"

[tool.setuptools.packages.find]
where = ["src/python"]
include = ["ipmi_temperature_control"]
namespaces = false